# br-doc-ocr

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
specs/001-brazilian-doc-ocr-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-brazilian-doc-ocr-model/contracts/: cli-interface.md  extraction-schemas.md  python-api.md
src/br_doc_ocr/: __init__.py  exceptions.py
src/br_doc_ocr/api/: __init__.py  app.py
src/br_doc_ocr/cli/: __init__.py  batch.py  classify.py  evaluate.py  extract.py  main.py  serve.py  train.py
src/br_doc_ocr/schemas/: __init__.py  cnh.json  invoice.json  rg.json
src/br_doc_ocr/services/: __init__.py  classification.py  dataset_adapter.py  evaluation.py  extraction.py  preprocessing.py  training.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_api_responses.py  test_schema_validation.py
tests/integration/: __init__.py  test_cli_commands.py  test_custom_schema.py  test_extraction_pipeline.py  test_invoice_extraction.py  test_rg_extraction.py  test_training_pipeline.py
tests/unit/: __init__.py  test_config.py  test_custom_schema.py  test_dataset.py  test_invoice_extraction.py  test_multi_document.py  test_orientation.py  test_postprocessing.py  test_preprocessing.py  test_prompts.py  test_rg_extraction.py  test_schemas.py
